--- a/amparafaravola/planting-rice/index.html
+++ b/amparafaravola/planting-rice/index.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li>
-                    <a href="about-me.html">
-                        Description of myself
+                    <a href="planting-rice.html">
+                    My first blog
                     </a>
                 </li>
             </ul>
