--- a/transplanting/index.html
+++ b/transplanting/index.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li>
-                    <a href="about-me.html">
-                        Description of myself
+                    <a href="transplanting-rice.html">
+                        My first blog
                     </a>
                 </li>
             </ul>
