--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="planting-rice.html">
-                    My first blog
+                    <a href="transplanting-rice.html">
+                        My first blog
+                    </a>
+                </li>
+                <li>
+                    <a href="about-me.html">
+                    About me
                     </a>
                 </li>
             </ul>
