--- a/transplanting-rice.html
+++ b/transplanting-rice.html
@@ -28,7 +28,7 @@
         </header> 
         <nav>
             <p>
-                In general, it is almost <b>seventy percent</b> (70%) of residence 
+                In general, almost <b>seventy percent</b> (70%) of residence 
                 in <b>Madagascar</b> are <b>farmers</b>. Including Alaotra Mangoro region is one of 
                 the most popular of farming rice because there always have a good product every year.
             </p>
@@ -39,8 +39,8 @@
             </h2>
             <img src="transplenting.jpg" alt="before transplanting">
             <p>
-                People usually deracinate the rice before planting it in the where it should be. 
-                They lived it for about <b>two days</b> at least in a good place then it won't dry.
+                People usually deracinate the rice before planting it in a place where it should be. 
+                They leave the rice for about <b>two days</b> at least in a good place that is not hot but not really cold too.
             </p>
             <h2>Transplanting rice</h2>
             <img src="transplenting-rice.jpg" alt="Transplanting rice">
@@ -56,9 +56,8 @@
                 We need <b>zebus</b> to work in the rice field 
                 even before transplanting or during the harvest time. 
                 They are really useful animals.
-            <p> We also can use another materiel 
-                but zebu is the most useful here in Madagascar, 
-                we also can have manure from them and use it for our farming.
+            <p>Even though, there are differents types of materiel that we can use but we prefer to use zebu here in Madagascar, 
+            also we can have manure for our farm from zebu.
             </p>
             <p>
                 However we need to take care of them 
@@ -88,7 +87,7 @@
             </ul>
                 <img src="rice-storage.jpg" alt>
                 <p>
-                    Nowadays, people use keet the <b>rice with its stem</b> 
+                    Nowadays, people are used to keep the <b>rice with its stem</b> 
                     as we can see in the picture for about a week or so 
                     it depends on the owner even though they leave it 
                     in the rice field for about a month it won't go off.
