--- a/about-me.html
+++ b/about-me.html
@@ -6,11 +6,17 @@
         <title>My first blog</title>
     </head>
     <body>
-        <h2>
-            Description of myself
-        </h2>
-        <p>
-            My name is Noeline. I'm from Soalazaina which is Alaotra-Mangoro region in Madagascar.
-             I'm a students at Onja in Mahanoro Madagascar.
-        </p>
+        <section>
+            <h2>
+                Description of myself
+            </h2>
+            <p>
+                My name is Noeline. I'm from Soalazaina which is Alaotra-Mangoro region in Madagascar.
+                I'm a students at Onja in Mahanoro Madagascar.
+            </p>
+            <p>
+                I am a child of farmers. I can know more about it.
+            </p>
+            <img src="noeline.jpg" alt>
+        </section>
     </body>
