--- a/about-me.html
+++ b/about-me.html
@@ -3,14 +3,32 @@
     <head>
         <meta charset="UTF-8"
         <meta name="viewport" content="width=device">
-        <title>My first blog</title>
+        <title>
+            My first blog
+        </title>
+        <style>
+            img{
+                max-width: 100%
+            }
+            section{
+                border: 1px solid #ccc;
+                padding: 0.1rem 1rem;
+                margin: 1rem 0;
+            }
+            section:target{
+                border-color: blue;
+            }
+        </style>
     </head>
     <body>
-        <h2>
-            Description of myself
-        </h2>
-        <p>
-            My name is Noeline. I'm from Soalazaina which is Alaotra-Mangoro region in Madagascar.
-             I'm a students at Onja in Mahanoro Madagascar.
-        </p>
+        <main>
+            <h2>
+                Description of myself
+            </h2>
+            <p>
+                My name is Noeline. I'm from <a href="https://en.wikipedia.org/wiki/Soalazaina">Soalazaina</a> which is Alaotra-Mangoro region in Madagascar. 
+                I'm a students at Onja in Mahanoro Madagascar.
+            </p>
+    </main>
     </body>
+</html>
