--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1>
-                Planting-rice
+                My blog
             </h1>
         </header>
         <nav>
@@ -21,6 +21,11 @@
                 <li>
                     <a href="about-me.html">
                     About me
+                    </a>
+                </li>
+                <li>
+                    <a href="mahanoro/flood.html">
+                        Flood in Mahanoro
                     </a>
                 </li>
             </ul>
