created a new blog

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                         Flood in Mahanoro
                     </a>
                 </li>
+                <li>
+                    <a href="soalazaina/my-village.html">
+                        Soalazaina village
+                    </a>
+                </li>
             </ul>
         </nav>
     </body>
