--- a/soalazaina/my-village.html
+++ b/soalazaina/my-village.html
@@ -80,7 +80,7 @@
         <nav>
             <p>
                 ←
-                <a href="index.html">Go back to the index</a>
+                <a href="../index.html">Go back to the index</a>
             </p>
         </nav>
         <a href="mailto:noeline.onja@gmail.com">
