--- a/transplanting-rice.html
+++ b/transplanting-rice.html
@@ -21,100 +21,105 @@
         </style>
     </head>
     <body>
-        <header>
-            <h1>
-                Planting-rice
-            </h1>
-        </header> 
-        <section>
-            <p>When I delve into Malagasy life. I become an inquisitive about letting you to know about that. 
-            <p>
-                In general, almost <b>seventy percent</b> (70%) of residence 
-                in <b>Madagascar</b> are <var>farmers</var>. Including Alaotra Mangoro region is one of 
-                the most popular of farming rice because there always has a good product every year.
-            </p>
-        </section>
-        <nav>
-            <h2>
-                Time of transplanting
-            </h2>
-            <img src="transplenting.jpg" alt="before transplanting">
-            <p>
-                People usually take a rice seedling from the first place they plant it before transplanting it in a place where it should be. 
-                They leave it for about <em>two days</em> at least in a good place that is not hot but not really cold too.
-            </p>
-            <h2>Transplanting rice</h2>
-            <img src="transplenting-rice.jpg" alt="Transplanting rice">
-            <p>
-                After two days or about we can transplant the rice. After transplanting, they usually make the rice field dry at least two days to make it rapidly growing up.
-            </p>
-            <p>
-                However, it is good to use some products like <stong>manure</stong> if the rice field is not fertile.
-            </p>
-            <h2>Needs for farming</h2>
-            <img src="zebu.jpg" alt>
-            <p>
-                We need <b>zebus</b> to work in the rice field 
-                even before transplanting or during the harvesting. 
-                They are such an useful animals. Also we can have manure for our farm from zebu.
-            <p>
-                Even though, there are differents types of materiel that we can use but Malagasy people prefer to use zebu, 
-                because it is easy to use and don't spend lots of money.
-            </p>
-            <p>
-                However, we need to take care of them 
-                like put them in a <b>good place</b>, feed them 
-                some vegetation after working and give some water.
-            </p>
-            <h2>
-                Harvesting rice
-            </h2>
-            <ul>
-                <li>
-                    <h3>
-                        Harvesting from the rice field
-                    </h3>
-                    <img src="harvesting.jpg" alt>
-                </li>
-            </ul>
-            <p>
-                The majority, people are usually harvested during the month of <var>May</var> and <var>June</var>. 
-                They can also transplant rice two times a year. But that depends on how the weather is. If there is lots of rain they can do that. Therefore, if there is not much rain, they can't transplant two times.
-                </p>
-            <ul>
-                <li>
-                <h3>To keep it safe</h3>
-                </li>
-            </ul>
-                <img src="rice-storage.jpg" alt>
+        <main>
+            <header>
+                <h1>
+                    Planting-rice
+                </h1>
                 <p>
-                    Nowadays, people are used to keep <b>rice with its stem</b> 
-                    as we can see in the picture above for about a week or so, I would say 
-                    it depends on the owner even though they leave it 
-                    in the rice field for about a month it won't go off if there is no water in the field.
+                    When I delve into Malagasy life. I become an inquisitive about letting you to know about that.
                 </p>
-                <p>People did that because they have a <b>huge rice field</b> 
-                    then they can't do all the work on one day.
+                <p>
+                    In general, almost <b>seventy percent</b> (70%) of residence 
+                    in <b>Madagascar</b> are <var>farmers</var>. Including Alaotra Mangoro region is one of 
+                    the most popular of farming rice because there always has a good product every year.
                 </p>
-            <h2>
-                Happy with your products
-            </h2>
-            <img src="selling-rice.jpg" alt>
-            <p>
-                Most of the time people are usually eating or keeping their first 
-                product but they don't sell it but some of the people don't have money. Then they have 
-                to sell it even though in a low price. They have no choice.
-            </p>
-        <nav>
-            <p>
-                ←
-                <a href="index.html">Go back to the index</a>
-            </p>
-        </nav>
-        <footer>
-            <a href="mailto:noeline.onja@gmail.com">
-                Email me for more information
-            </a>
-        </footer>
-        </nav>
+            </header> 
+            <nav>
+                <h2>
+                    Time of transplanting
+                </h2>
+                <img src="transplenting.jpg" alt="before transplanting">
+                <p>
+                    People usually take a rice seedling from the first place they plant it before transplanting it in a place where it should be. 
+                    They leave it for about <em>two days</em> at least in a good place that is not hot but not really cold too.
+                </p>
+                <h2>Transplanting rice</h2>
+                <img src="transplenting-rice.jpg" alt="Transplanting rice">
+                <p>
+                    After two days or about we can transplant the rice. After transplanting, 
+                    they usually make the rice field dry at least two days to make it rapidly growing up.
+                </p>
+                <p>
+                    However, it is good to use some products like <strong>manure</strong> if the rice field is not fertile.
+                </p>
+                <h2>Needs for farming</h2>
+                <img src="zebu.jpg" alt>
+                <p>
+                    We need <b>zebus</b> to work in the rice field 
+                    even before transplanting or during the harvesting. 
+                    They are such a useful animals. Also, we can have manure for our farm from zebu.
+                <p>
+                    Even though, there are different types of materiel that we can use but Malagasy people prefer to use zebu, 
+                    because it is easy to use and don't spend lots of money.
+                </p>
+                <p>
+                    However, we need to take care of them 
+                    like put them in a <b>good place</b>, feed them 
+                    some vegetation after working and give some water.
+                </p>
+                    </nav>
+                <h2>
+                    Harvesting rice
+                </h2>
+                <ul>
+                    <li>
+                        <h3>
+                            Harvesting from the rice field
+                        </h3>
+                        <img src="harvesting.jpg" alt>
+                    </li>
+                </ul>
+                <p>
+                    The majority, people are usually harvested during the month of <var>May</var> and <var>June</var>. 
+                    They can also transplant rice two times a year. But that depends on how the weather is. 
+                    If there is lots of rain, they can do that. Therefore, if there is not much rain, they can't transplant two times.
+                    </p>
+                <ul>
+                    <li>
+                    <h3>To keep it safe</h3>
+                    </li>
+                </ul>
+                    <img src="rice-storage.jpg" alt>
+                    <p>
+                        Nowadays, people are used to keep <b>rice with its stem</b> 
+                        as we can see in the picture above for about a week or so, I would say 
+                        it depends on the owner even though they leave it 
+                        in the rice field for about a month it won't go off if there is no water in the field.
+                    </p>
+                    <p>People did that because they have a <b>huge rice field</b> 
+                        then they can't do all the work on one day.
+                    </p>
+                <h2>
+                    Happy with your products
+                </h2>
+                <img src="selling-rice.jpg" alt>
+                <p>
+                    Most of the time people are usually eating or keeping their first 
+                    product but they don't sell it but some of the people don't have money. 
+                    Then they have to sell it even though in a low price. They have no choice.
+                </p>
+            <nav>
+                <p>
+                    ←
+                    <a href="index.html">Go back to the index</a>
+                </p>
+            </nav>
+            <footer>
+                <a href="mailto:noeline.onja@gmail.com">
+                    Email me for more information
+                </a>
+            </footer>
+        </main>
     </body>
+</html>
