--- a/transplanting-rice.html
+++ b/transplanting-rice.html
@@ -5,20 +5,7 @@
         <meta name="viewport" content="width=device=width">
         <title>
             My blog
-        s</title>
-        <style>
-            img{
-                max-width: 100%
-            }
-            section{
-                border: 1px solid #ccc;
-                padding: 0.1rem 1rem;
-                margin: 1rem 0;
-            }
-            section:target{
-                border-color: blue;
-            }
-        </style>
+        </title>
     </head>
     <body>
         <main>
