fixed the style

--- a/about-me.html
+++ b/about-me.html
@@ -6,14 +6,15 @@
         <title>
             My first blog
         </title>
+        <link rel="stylesheet" href="about-me.css">
     </head>
     <body>
         <main>
             <header>
-                <h2>
+                <h1>
                     Description of myself
-                </h2>
-                <img src="noeline.jpg" alt>
+                </h1>
+                <img class="noeline" src="noeline.jpg" alt>
                 <p>
                     My name is Noeline. I'm from <a href="https://en.wikipedia.org/wiki/Soalazaina">Soalazaina</a> which is in Alaotra Mangoro region in Madagascar. 
                     I study at <a href="https://web.facebook.com/OnjaAfrica/?_rdc=1&_rdr">Onja</a> in Mahanoro Madagascar. 
