--- a/soalazaina/my-village.html
+++ b/soalazaina/my-village.html
@@ -6,13 +6,9 @@
         <title>
             My blog
         </title>
+        <link rel="stylesheet" href="../blog.css">
     </head>
     <body>
-        <header>
-            <h1>
-                My village Soalazaina
-            </h1>
-        </header>
         <main>
             <header>
                 <h1>
@@ -28,7 +24,7 @@
                 <h2>
                     <u>About my home village</u>
                 </h2>
-                <img src="soalazaina.jpg" alt>
+                <img class="soalazaina" src="soalazaina.jpg" alt>
                 <p>
                     This village is still a rural village but well-known to everyone. 
                     It is surrounded by green spaces including pine forests. 
@@ -64,10 +60,10 @@
             <nav>
                 <p>
                     ←
-                    <a href="../index.html">Go back to the index</a>
+                    <a class="index" href="../index.html">Go back to the index</a>
                 </p>
             </nav>
-            <a href="mailto:noeline.onja@gmail.com">
+            <a class="email" href="mailto:noeline.onja@gmail.com">
                 Email me for more information
             </a>
         </footer>
