--- a/transplanting-rice.html
+++ b/transplanting-rice.html
@@ -6,11 +6,12 @@
         <title>
             My blog
         </title>
+        <link rel="stylesheet" href="transplantig-rice.css">
     </head>
     <body>
         <main>
             <header>
-                <h1>
+                <h1 class="planting">
                     Planting-rice
                 </h1>
                 <p>
