--- a/soalazaina/my-village.html
+++ b/soalazaina/my-village.html
@@ -7,21 +7,7 @@
         <title>
             My blog
         </title>
-        <style>
-            img {
-                max-width: 100%
-            }
-
-            section {
-                border: 1px solid #ccc;
-                padding: 0.1rem 1rem;
-                margin: 1rem 0;
-            }
-
-            section:target {
-                border-color: blue;
-            }
-        </style>
+        <link rel="stylesheet" href="my-village.css">
     </head>
     <body>
         <header>
