Added the new links

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device">
         <title>My first blog</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <header>
             <h1>
                 My blog
             </h1>
+            <p>You can click all the links here to find all of my blogs in here.</p>
         </header>
-        <nav>
+        <main> 
             <ul>
                 <li>
                     <a href="transplanting-rice.html">
@@ -34,6 +36,6 @@
                     </a>
                 </li>
             </ul>
-        </nav>
+        </main>
     </body>
 </html>
