--- a/mahanoro/flood.html
+++ b/mahanoro/flood.html
@@ -6,19 +6,8 @@
     <title>
       My blog
     </title>
-    <style>
-        img{
-            max-width: 100%
-        }
-        section{
-            border: 1px solid #ccc;
-            padding: 0.1rem 1rem;
-            margin: 1rem 0;
-        }
-        section:target{
-            border-color: blue;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/flood.css">
+    <link rel="stylesheet" href="../css/footer.css">
   </head>
   <body>
     <main>
