--- a/soalazaina/my-village.html
+++ b/soalazaina/my-village.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>
             My blog
         </title>
-        <link rel="stylesheet" href="my-village.css">
+        <link rel="stylesheet" href="../css/my-village.css">
+        <link rel="stylesheet" href="../css/footer.css">
     </head>
     <body>
         <header>
