--- a/transplanting-rice.html
+++ b/transplanting-rice.html
@@ -24,7 +24,7 @@
                     the most popular of farming rice because there always has a good product every year.
                 </p>
             </header> 
-            <nav>
+            <section>
                 <h2>
                     Time of transplanting
                 </h2>
@@ -57,7 +57,8 @@
                     like put them in a <b>good place</b>, feed them 
                     some vegetation after working and give some water.
                 </p>
-                    </nav>
+            </section>
+            <section>
                 <h2>
                     Harvesting rice
                 </h2>
@@ -98,6 +99,7 @@
                     product but they don't sell it but some of the people don't have money. 
                     Then they have to sell it even though in a low price. They have no choice.
                 </p>
+            </section>
             <footer>
                 <p>
                     ←
